# MOLEG-API

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  workflow.yml
docs/: README.md  SKILL-AUTHOR-COOKBOOK.md  SKILL-INTEGRATION.md  api-guide.md  cli.md  followups.md  quickstart.md  release-checklist.md  source-coverage.md
docs/design/: COMPLETION-RISK-AUDIT.md  CONSUMER-READINESS-REVIEW.md  DECISIONS.md  DETC-DOCTRINE-DISCOVERY.md  FAKE-SKILL-TRACER-BULLET.md  GOAL-COMPLETION-AUDIT.md  LEGAL-CONTEXT-BUNDLE.md  LEGISLATIVE-EXPERT-E2E-AUDIT.md  LIVE-E2E-SCENARIOS.md  MOLEG-API-AUDIT.md  PRD.md  README.md
docs/wiki/: API-Reference.md  Agent-Integration.md  Architecture.md  CLI-Reference.md  Core-Concepts.md  Error-Handling.md  Gotchas.md  Historical-Versions.md  Home.md  Installation.md  Maintainer-Notes.md  Quickstart.md  Sources-and-Coverage.md  _Sidebar.md
moleg_api/: __init__.py  __main__.py  _version.py  cli.py  errors.py  laws.py  models.py  normalization.py  source.py
moleg_api/_cli/: __init__.py  brief_mode.py  catalog.py  constants.py  data.py  dispatch.py  foundation.py  main.py  parser.py  payload_size.py  signal_helpers.py  signals.py  signals_meta.py
moleg_api/_laws/: __init__.py  adjudication_registry.py  admin_scope.py  annex_tables.py  api.py  api_adjudications.py  api_admin_rules.py  api_annex.py  api_article_context.py  api_authority_context.py  api_bundle.py  api_comparable.py  api_compare.py  api_delegated_criteria.py  api_followups.py  api_history.py  (+50 more)
scripts/: audit_moleg_catalog.py  fake_skill_tracer_bullet.py  introspect_congress_db.py  legislative_expert_answer_discipline.py  legislative_expert_e2e_audit.py  legislative_expert_prompt_dry_run.py
tests/: test_adjudications_0_3_0.py  test_cli.py  test_command_smoke_0_3_0.py  test_congress_db_introspection.py  test_context_efficiency_0_3_0.py  test_exit_classification_0_3_0.py  test_fake_skill_tracer_bullet.py  test_laws.py  test_laws_docstrings.py  test_legislative_expert_answer_discipline.py  test_legislative_expert_artifact_safety.py  test_legislative_expert_e2e_audit.py  test_legislative_expert_gate_crosswalk.py  test_legislative_expert_prompt_dry_run.py  test_live_e2e_scenarios.py  test_live_smoke.py  test_models.py  test_refactor_compat.py  test_revision_reason_0_3_0.py  test_sdk_fixes_0_2_1.py  test_sdk_fixes_0_2_2.py  test_source.py  test_version_signal_0_3_0.py  test_versions.py
wiki/: API-Reference.md  CLI-Reference.md  Historical-Versions.md  Home.md  Installation.md  Maintainer-Notes.md  Quickstart.md  Sources-and-Coverage.md  _Sidebar.md
(+30 files in other folders)
